<resources>
    <string name="menu_maps">Мапа</string>
    <string name="menu_home">За базою адрес</string>
    <string name="menu_gallery">Мої маршрути</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_about">Про додаток</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_exit">🚪 Вихід</string>
    <string name="delete_record">видалити?</string>
    <string name="make_rout">Створити маршрут</string>
    <string name="call_admin">Дзвінок оператору</string>
    <string name="email_friend">Розповісти другові</string>
    <string name="my_phone">Мій телефон</string>
    <string name="open_maps">Замовити по мапе</string>
    <string name="driver">🚖 ‍Робота водієм (реклама)</string>
    <string name="send_email">✉️ Поділитися</string>
    <string name="gps_ok">Визначення геопозиції включено</string>
    <string name="cancel_button">Ні, дякую</string>
    <string name="gps_on">Увімкнути</string>
    <string name="gps_info">Щоб покращити роботу програми, дозвольте доступ на пристрої до Вашої геолокації</string>
    <string name="gps_on_button">включить gps</string>
    <string name="wellcome">Сформуйте маршрут або виберіть улюблений.</string>
    <string name="verify_phone">Перевірка телефону</string>
    <string name="verify_phone_question">Номер введено правильно?</string>
    <string name="phone_edit">Виправити</string>
    <string name="format_phone">Формат вводу номера телефону: +38 093 666 55 44</string>
    <string name="sent_button">Відправити</string>
    <string name="verify_internet">Перевірте інтернет-з\'єднання, зателефонуйте оператору або перезавантажте програму.</string>
    <string name="save_button">Зберегти</string>
    <string name="you_this">"Ви зараз тут: "</string>
    <string name="make_rout_message">Сформуйте маршрут</string>
    <string name="error_message">Сталася помилка. Наберіть оператора через "ДОПОМОГА" або натисніть тут для перезавантаження сторінки</string>
    <string name="to_point">"Місце призначення: "</string>
    <string name="cost_of_order">" Вартість поїздки: "</string>
    <string name="firebase_false_message">грн. Вибачте, без перевірки Google-акаунту замовлення не можливе.</string>
    <string name="UAH">грн</string>
    <string name="order">Замовити</string>
    <string name="order_card">Замовити</string>
    <string name="thanks_message">"Дякуємо за замовлення від "</string>
    <string name="call_of_order">" Очікуйте дзвінка оператора. Вартість поїздки: "</string>
    <string name="next_try">" Спробуйте ще або зателефонуйте оператору."</string>
    <string name="help">Підтримка</string>
    <string name="show_to_point">Вкажіть місце призначення</string>
    <string name="change">по GPS</string>
    <string name="on_city">"по місту"</string>
    <string name="on_city_tv">"по місту"</string>
    <string name="help_button">Підтримка</string>
    <string name="try_again">Перезавантажити</string>
    <string name="ok_button">Ок</string>
    <string name="to_message">" -> "</string>
    <string name="rout_from_message">Вкажить місце відправлення</string>
    <string name="routs_button">Маршрути</string>
    <string name="old_routs_message">Обирайте зі списку попередніх поїздок</string>
    <string name="firebase_error">Вибачте. Вхід заблоковано. Зверніться до оператора.</string>
    <string name="choice_button">підтвердити</string>
    <string name="to_edit">Куди</string>
    <string name="from_edit">Звідки</string>
    <string name="sms_code">Код перевіркі зі смс-повідомлення</string>
    <string name="android">Андроїд-додаток для швидких та дешевих поїздок при замовленні онлайн.</string>
    <string name="good_day">Мої вітання. \n \n Знайшов чудовий додаток для поїздок на таксі. \n \n Раджу спробувати за посиланням в офіційному магазині Google: \n\n https://play.google.com/store/apps/details?id=com.taxi.easy.ua \n\n Гарного дня. \n Ще побачимось.</string>
    <string name="share">Порадити другові додаток...</string>
    <string name="no_email_agent">Поштовий клієнт не встановлено.</string>
    <string name="check_position">Зачекайте, відбувається визначення Вашого розташування...</string>
    <string name="my_adresses">Обрані</string>
    <string name="make_order_message">Здійсніть хоча б одну поїздку</string>
    <string name="to_adress_message">Куди їдемо?</string>
    <string name="coastMarkersMessage">"Вартість подорожі по маршруту "</string>
    <string name="please_phone_message">Додаток передає номер Вашого мобільного телефону для включення функції замовлення таксі. Натиснувши кнопку Зберегти Ви підтверджуєте згоду на передачу номера телефону диспетчеру для пошуку автомобіля та збереження його для наступних замовлень.</string>
    <string name="check_message">Зачекайте, йде підключення.</string>
    <string name="find_of_map">Спробуйте знайти на карті</string>
    <string name="end_point_marker">Місце призначення</string>
    <string name="error_firebase_start">Помилка перевірки. Наберіть оператора через "ДОПОМОГУ"</string>
    <string name="address_error_message">Помилка введення адреси</string>
    <string name="BAGGAGE">Завантаження салону</string>
    <string name="ANIMAL">Тварина</string>
    <string name="CONDIT">Кондиціонер</string>
    <string name="MEET">Зустріч з табличкою</string>
    <string name="COURIER">Кур\'єр. доставка</string>
    <string name="TERMINAL">Термінал</string>
    <string name="CHECK">Чек</string>
    <string name="BABY_SEAT">Дитяче крісло</string>
    <string name="DRIVER">Драйвер</string>
    <string name="NO_SMOKE">Некурячий водій</string>
    <string name="ENGLISH">Англомовний водій</string>
    <string name="CABLE">Трос</string>
    <string name="FUEL">Підвезення палива</string>
    <string name="WIRES">Провід</string>
    <string name="SMOKE">Я куритиму</string>
    <string name="add_services">Опції</string>
    <string name="time_limit">Превышение времени выполнения</string>
    <string name="slow_internet">Низька швидкість інтернету</string>
    <string name="update_message">Необхідно провести оновлення</string>
    <string name="update_url">Оновити додаток</string>
    <string name="new_version">Доступна нова версія</string>
    <string name="new_message">Повідомлення </string>
    <string name="news_of_version">У новій версії покращено продуктивність та додано нові зручні функції</string>
    <string name="Street_hint">Вулиця</string>
    <string name="gps">GPS</string>
    <string name="btn_cost">Замовити</string>
    <string name="texthist">Попередні адреси</string>
    <string name="routs">Мої адреси</string>
    <string name="on_map">по мапі</string>
    <string name="add_cost_message">Збільшіть вартість поїздки для швидкого пошуку машини</string>
    <string name="from_text">Звідки</string>
    <string name="to_text">Куди</string>
    <string name="serve">Подача</string>
    <string name="coment">Повідомлення для водія</string>
    <string name="services">ПОСЛУГИ</string>
    <string name="resettimetoorder">Перевірте дату або час для попереднього замовлення</string>
    <string name="my_routs">Оберіть маршрут</string>
    <string name="no_routs">Немає маршрутів</string>
    <string name="cheng">Змінити</string>
    <string name="delete_routs">видалити</string>
    <string name="text_result">Ваш маршрут</string>
    <string name="btn_again_text">Замовити ще</string>
    <string name="textStatus">Статус замовлення</string>
    <string name="cancel_order">Скасувати замовлення</string>
    <string name="ex_st_1">Очікується пошук машини (для попереднього замовлення)</string>
    <string name="ex_st_2">Знайдена машина.</string>
    <string name="ex_st_2_1">Машина подана на посадку. Виходьте на Вас чекає водій. </string>
    <string name="ex_st_3">" Номер авто: "</string>
    <string name="ex_st_4">" Телефон водія: "</string>
    <string name="ex_st_5">" Очікуваний час подачі: "</string>
    <string name="ex_st_0">Здійснюється пошук машини</string>
    <string name="your_city">"Ваше місто "</string>
    <string name="Kyiv_city">Київ</string>
    <string name="Odessa">Одеса</string>
    <string name="gps_message">Для використання карти увімкніть GPS</string>
    <string name="city">Місто</string>
    <string name="change_message">"Зміна бази адрес. "</string>
    <string name="server_error_connected">Сервер не прийняв запит. Наберіть оператора через "ДОПОМОГУ"</string>
    <string name="GDPR">GDPR</string>
    <string name="ok_GDPR">Погодитись</string>
    <string name="Dnipro_city">Дніпро</string>
    <string name="city_change">Виберіть місто</string>
    <string name="Zaporizhzhia">Запоріжжя</string>
    <string name="Cherkasy">Черкаси</string>
    <string name="OdessaTest">Одеса (Тест)</string>
    <string name="disc_text">% +/- 💰🧾</string>
    <string name="email_sent">Повідомлення відправлено</string>
    <string name="send_like">👍 Оцінити додаток</string>
    <string name="send_email_admin">📢 Повідомити про проблему</string>
    <string name="send_report_admin">Повідомити про проблему</string>
    <string name="SA_subject">Повідомлення № I-</string>
    <string name="SA_message_start">Текст Вашого повідомленя: </string>
    <string name="SA_info_pas">Інформація про додаток: </string>
    <string name="SA_info_city">База адрес міста </string>
    <string name="SA_pas_text">Додаток: </string>
    <string name="SA_user_text">Користувач: </string>
    <string name="SA_email">Електронна пошта: </string>
    <string name="SA_phone_text">"Телефон: </string>
    <string name="black_list_message">Вибачьте, Ви не можете замовляти поїздки. За інформацією зверніться до оператора.</string>
    <string name="action_help">ДОПОМОГА</string>
    <string name="cost_of_road">Вартість поїздки вибраним маршрутом складе</string>
    <string name="btn_geo_text">Доступ до геопозиції</string>
    <string name="uid_menu">Історія замовлень</string>
    <string name="my_bonus_menu">Мої бонуси</string>
    <string name="my_card_pay">Оплата</string>
    <string name="conf">Конфіденційність</string>
    <string name="author_about">Про автора</string>
    <string name="order_to_cancel">Замовлення в роботі</string>
    <string name="account_menu">Акаунт</string>
    <string name="your_order">Ваше замовлення</string>
    <string name="del_acc_mes">Всі Ваші персональні дані та налаштування будуть видалені з додатку та наших серверів. Додаток буде закрит.</string>
    <string name="search_address">Пошук адреси</string>
    <string name="yes">Так</string>
    <string name="no_internet">Немає підключення до інтернету</string>
    <string name="no_internet_banner_hint">Перевірте Wi‑Fi або мобільні дані</string>
    <string name="shortcut_order_short">🚕 Замовити</string>
    <string name="shortcut_order_long">Замовити таксі</string>
    <string name="shortcut_driver_short">👨‍✈️ Робота</string>
    <string name="shortcut_driver_long">Робота водієм</string>
    <string name="shortcut_disabled">Функція тимчасово недоступна</string>
    <string name="retry">перевірити</string>
    <string name="close">Закрити</string>
    <string name="verification_required_title">📱 Вхід до облікового запису</string>
    <string name="verification_required_message">Для повноцінної роботи з додатком TAXI рекомендується увійти у свій обліковий запис або зареєструватися.\n\nЦе займе всього хвилину!</string>
    <string name="verify_now">Увійти</string>
    <string name="exit_app">Вийти</string>
    <string name="start">Старт</string>
</resources>