<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_maps"-->
<!--            android:icon="@android:drawable/ic_dialog_map"-->
<!--            android:title="@string/menu_maps" />-->
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_uid"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/uid_menu" />
        <item
            android:id="@+id/nav_bonus"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_bonus_menu" />

         <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>

</menu>