<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/phone_settings"
        android:orderInCategory="100"
        android:title="@string/my_phone"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_driver"
        android:orderInCategory="100"
        android:title="@string/driver" />
    <item
        android:id="@+id/send_email"
        android:orderInCategory="100"
        android:title="@string/send_email" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>