<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_visicom">

    <fragment
        android:id="@+id/nav_visicom"
        android:name="com.taxi.easy.ua.ui.visicom.VisicomFragment"

        tools:layout="@layout/fragment_visicom" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.taxi.easy.ua.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_cancel"
        android:name="com.taxi.easy.ua.ui.active_order.CancelFragment"
        android:label="@string/order_to_cancel"
        tools:layout="@layout/fragment_cancel" />
<!--    <fragment-->
<!--        android:id="@+id/nav_gallery"-->
<!--        android:name="com.taxi.easy.ua.ui.gallery.GalleryFragment"-->
<!--        android:label="@string/menu_gallery"-->
<!--        tools:layout="@layout/fragment_gallery" />-->

    <fragment
        android:id="@+id/nav_uid"
        android:name="com.taxi.easy.ua.ui.history.HistoryFragment"
        android:label="@string/uid_menu"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/nav_bonus"
        android:name="com.taxi.easy.ua.ui.bonus.BonusFragment"
        android:label="@string/my_bonus_menu"
        tools:layout="@layout/fragment_bonus" />

    <fragment
        android:id="@+id/nav_card"
        android:name="com.taxi.easy.ua.ui.card.CardFragment"
        android:label="@string/my_card_pay"
        tools:layout="@layout/fragment_card" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.taxi.easy.ua.ui.about.AboutFragment"
        android:label="@string/conf"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_author"
        android:name="com.taxi.easy.ua.ui.author.AuthorFragment"
        android:label="@string/author_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.taxi.easy.ua.ui.account.AccountFragment"
        android:label="@string/account_menu"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_finish_separate"
        android:name="com.taxi.easy.ua.ui.finish.fragm.FinishSeparateFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_finish_separate" />

    <fragment
        android:id="@+id/nav_restart"
        android:name="com.taxi.easy.ua.ui.restart.RestartFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_restart" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.taxi.easy.ua.ui.visicom.visicom_search.VisicomSearchFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_visicom_search" />

    <fragment
        android:id="@+id/nav_cacheOrder"
        android:name="com.taxi.easy.ua.ui.finish.fragm.CacheOrderFragment"
        android:label="@string/your_order"
        tools:layout="@layout/fragment_cache_order" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.taxi.easy.ua.ui.open_map.OpenStreetMapFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_openstreetmap" />

    <fragment
        android:id="@+id/nav_city"
        android:name="com.taxi.easy.ua.ui.cities.check.CityCheckFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_city_check" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.taxi.easy.ua.ui.settings.SettingsFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_options"
        android:name="com.taxi.easy.ua.ui.options_order.OptionsFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_visicom_options" />

    <fragment
        android:id="@+id/nav_anr"
        android:name="com.taxi.easy.ua.ui.exit.AnrFragment"
        android:label="@string/search_address"
        tools:layout="@layout/fragment_anr" />

</navigation>