<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background_color">


    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/error"
        android:gravity="center"
        android:text="@string/del_acc_mes"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        android:layout_width="293sp"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:background="@drawable/buttons_red"
        android:fontFamily="@font/regular"
        android:text="@string/choice_button"
        android:textAlignment="center"
        android:textColor="#D9D9D9"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewInfo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="293sp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/regular"
        android:text="@string/order"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ok" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCallAdmin"
        android:layout_width="293sp"
        android:layout_height="wrap_content"

        android:layout_marginTop="12dp"
        android:background="@drawable/buttons"
        android:fontFamily="@font/regular"
        android:text="@string/call_admin"
        android:textAlignment="center"
        android:textColor="#D9D9D9"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enter" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="293sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:background="@drawable/buttons_red"
        android:fontFamily="@font/regular"
        android:text="@string/action_exit"
        android:textAlignment="center"
        android:textColor="#D9D9D9"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCallAdmin" />

</androidx.constraintlayout.widget.ConstraintLayout>